# ChessbutBad

./: CMakeLists.txt  README.md
lib/glad/: glad.h
shaders/: fs.glsl  vs.glsl
src/: glad.c  main.c
src/gfx/utils/: LOG.h
src/gfx/utils/board/: board.c  board.h
src/gfx/utils/camera/: camera.h
src/gfx/utils/shader/: shader.h
src/gfx/utils/spawner/: spawner.c  spawner.h
src/gfx/utils/terriblerenderer/: renderer.c  renderer.h
src/gfx/utils/texture/: texture.c
src/gfx/utils/window/: window.c  window.h
